Fix overflow scroll issue in marketplace styles

--- a/RPM/pages/marketplace/styles.css
+++ b/RPM/pages/marketplace/styles.css
@@ -21,7 +21,7 @@ a:hover {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .listing {
